# ChoirLoop

./: .env.deploy.example  .gitignore  DEPLOYMENT.md  Dockerfile  MIGRATION_TO_PYTHON.md  README.md  SETUP.md  claude.md  deploy.sh  docker-compose.yml  openapi.yaml
architecture_docs/: architecture.md  codebaseSummary.md  currentTask.md  projectRoadmap.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend-python/: Dockerfile  pyproject.toml
backend-python/app/: __init__.py  main.py  models.py  storage.py
backend-python/app/routes/: files.py  health.py  sections.py
backend/app/: main.py  models.py  mp3_generator.py  storage.py
backend/app/Http/Controllers/: PracticeSectionController.php  SongController.php
backend/app/Services/: MidiParser.php
backend/app/routes/: files.py  mp3.py  songs.py
backend/config/: cors.php
backend/data/: index.json
backend/data/songs/96af2373-8c76-4abe-be6b-e66a92770fee/: config.json
backend/data/songs/ecb12847-edae-4c3e-b743-d4337c63cb5b/: score.mxl  score.xml  song.mid
backend/routes/: api.php
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.jsx  config.js
frontend/src/api/: client.js
frontend/src/components/: AudioPlayer.jsx  DeeplinkDisplay.jsx  FileUpload.jsx  Layout.jsx  MyPracticeView.jsx  PracticeSections.jsx  PracticeView.jsx  ScoreViewer.jsx  SongList.jsx  VoiceConfiguration.jsx
frontend/src/utils/: deeplink.js
old_backend/: composer.json
old_backend/app/Http/Controllers/: PracticeSectionController.php  (+1 more)
old_backend/routes/: api.php
(+3 files in other folders)
