[project]
name = "choirloop-backend"
version = "1.0.0"
description = "ChoirLoop API - Python FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "mido>=1.3.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "midi2audio>=0.1.1",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]
